fix settings ui

--- a/app/src/main/res/menu/activity_meeting_list_drawer.xml
+++ b/app/src/main/res/menu/activity_meeting_list_drawer.xml
@@ -3,33 +3,25 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
+            android:id="@+id/nav_group"
+            android:icon="@drawable/ic_group"
+            android:title="Список встреч" />
         <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
-        <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
-        <item
-            android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+            android:id="@+id/nav_add_group"
+            android:icon="@drawable/ic_group_add"
+            android:title="Добавить встречу" />
     </group>
 
-    <item android:title="Communicate">
+    <item android:title="Настройки">
         <menu>
             <item
                 android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
+                android:icon="@drawable/ic_settings"
+                android:title="Настройки" />
             <item
                 android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
+                android:icon="@drawable/ic_help"
+                android:title="Вопросы и ответы" />
         </menu>
     </item>
 
