--- a/app/src/main/res/menu/activity_meeting_list_drawer.xml
+++ b/app/src/main/res/menu/activity_meeting_list_drawer.xml
@@ -10,16 +10,26 @@
             android:id="@+id/nav_add_group"
             android:icon="@drawable/ic_group_add"
             android:title="Добавить встречу" />
+        <item
+            android:id="@+id/nav_search"
+            android:icon="@drawable/ic_search"
+            android:title="Поиск по встречам"
+            />
     </group>
 
     <item android:title="Настройки">
         <menu>
             <item
-                android:id="@+id/nav_share"
+                android:id="@+id/nav_exit"
+                android:icon="@drawable/ic_exit"
+                android:title="Выйти из аккаунта"
+                />
+            <item
+                android:id="@+id/nav_settings"
                 android:icon="@drawable/ic_settings"
                 android:title="Настройки" />
             <item
-                android:id="@+id/nav_send"
+                android:id="@+id/nav_faq"
                 android:icon="@drawable/ic_help"
                 android:title="Вопросы и ответы" />
         </menu>
