--- a/app/src/main/res/menu/desc_menu.xml
+++ b/app/src/main/res/menu/desc_menu.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/action_update"
+        android:id="@+id/action_back"
         android:icon="@drawable/ic_reply_white"
         android:title="Назад"
         app:showAsAction="always"
