--- a/app/src/main/res/layout/activity_meeting_desc.xml
+++ b/app/src/main/res/layout/activity_meeting_desc.xml
@@ -7,35 +7,94 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.meetingroom.MeetingDescActivity">
+    tools:context="com.meetingroom.MeetingDescActivity"
+    android:layout_centerVertical="true"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:weightSum="1"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:id="@+id/linearLayout">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="44dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:id="@+id/desc_title"
-            android:hint="Title" />
+            android:hint="Заголовок" />
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="38dp"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:id="@+id/desc_description"
-            android:layout_weight="0.09"
-            android:hint="Description" />
+            android:hint="Описание" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Участники"
-            android:id="@+id/desc_party" />
+            android:text="Участники:"
+            android:paddingBottom="10dp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/linearLayout"
+        android:layout_alignParentStart="true"
+        android:id="@+id/linearLayout2">
+
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:id="@+id/desc_party"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_below="@+id/linearLayout2"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="20dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Начало: "
+            android:paddingBottom="10dp"
+            android:id="@+id/desc_begin" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Конец: "
+            android:paddingBottom="10dp"
+            android:id="@+id/desc_end" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Приоритет: "
+            android:paddingBottom="20dp"
+            android:id="@+id/desc_priority" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Подтвердить \nучастие" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true">
+
+
 
     </LinearLayout>
 
