--- a/app/src/main/res/menu/desc_menu.xml
+++ b/app/src/main/res/menu/desc_menu.xml
@@ -3,10 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/action_del"
+        android:icon="@drawable/ic_clear_white"
+        android:title="Удалить встречу"
+        app:showAsAction="always"
+        />
+    <item
         android:id="@+id/action_back"
         android:icon="@drawable/ic_reply_white"
         android:title="Назад"
         app:showAsAction="always"
         />
+
 
 </menu>
