--- a/app/src/main/res/layout/activity_meeting_desc.xml
+++ b/app/src/main/res/layout/activity_meeting_desc.xml
@@ -23,21 +23,26 @@
             android:layout_height="44dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:id="@+id/desc_title"
-            android:hint="Заголовок" />
+            android:hint="Заголовок"
+            android:textSize="30dp" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="38dp"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:id="@+id/desc_description"
-            android:hint="Описание" />
+            android:hint="Описание"
+            android:textSize="20dp"
+            android:textIsSelectable="true" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="Участники:"
-            android:paddingBottom="10dp" />
+            android:paddingBottom="10dp"
+            android:textSize="25dp"
+            android:textColor="#000" />
 
     </LinearLayout>
 
@@ -48,11 +53,10 @@
         android:layout_alignParentStart="true"
         android:id="@+id/linearLayout2">
 
-        <ListView
-            android:layout_width="match_parent"
+        <ExpandableListView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:id="@+id/desc_party"/>
+            android:id="@+id/desc_party" />
     </LinearLayout>
 
     <LinearLayout
@@ -68,34 +72,27 @@
             android:layout_height="wrap_content"
             android:text="Начало: "
             android:paddingBottom="10dp"
-            android:id="@+id/desc_begin" />
+            android:id="@+id/desc_begin"
+            android:textSize="25dp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Конец: "
             android:paddingBottom="10dp"
-            android:id="@+id/desc_end" />
+            android:id="@+id/desc_end"
+            android:textSize="25dp" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Приоритет: "
             android:paddingBottom="20dp"
-            android:id="@+id/desc_priority" />
+            android:id="@+id/desc_priority"
+            android:textSize="25dp" />
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Подтвердить \nучастие" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_alignParentStart="true">
-
-
-
     </LinearLayout>
 
 </RelativeLayout>
