--- a/app/src/main/res/layout/activity_meeting_add.xml
+++ b/app/src/main/res/layout/activity_meeting_add.xml
@@ -87,7 +87,8 @@
         android:text="добавить"
         android:id="@+id/add_button"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:onClick="onClickAdd"/>
 
     <EditText
         android:layout_width="wrap_content"
