--- a/app/src/main/res/layout/activity_meeting_desc.xml
+++ b/app/src/main/res/layout/activity_meeting_desc.xml
@@ -58,7 +58,8 @@
             android:text="Участники:"
             android:paddingBottom="10dp"
             android:textSize="20dp"
-            android:textColor="#000" />
+            android:textColor="#000"
+            android:id="@+id/text_partys" />
 
         <ExpandableListView
             android:layout_width="match_parent"
