--- a/app/src/main/res/layout/content_meeting_list.xml
+++ b/app/src/main/res/layout/content_meeting_list.xml
@@ -17,10 +17,12 @@
         android:orientation="vertical">
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Сегодня"
-            android:layout_marginStart="140dp"/>
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true"
+            android:layout_gravity="center_horizontal"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -30,7 +32,7 @@
             android:id="@+id/date"
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true"
-            android:layout_marginStart="136dp" />
+            android:layout_gravity="center_horizontal"/>
     </LinearLayout>
 
 
