--- a/app/src/main/res/layout/activity_meeting_add.xml
+++ b/app/src/main/res/layout/activity_meeting_add.xml
@@ -11,108 +11,105 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/scrollView3">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Добавить встречу"
-        android:id="@+id/textView3"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Загаловок"
-        android:id="@+id/add_title"
-        android:paddingBottom="20dp"
-        android:layout_below="@+id/textView3"
-        android:layout_alignParentStart="true" />
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Описание"
-        android:paddingBottom="20dp"
-        android:layout_below="@+id/add_title"
-        android:layout_alignParentStart="true"
-        android:id="@+id/add_desc" />
+        android:layout_height="match_parent">
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="date"
-        android:ems="10"
-        android:id="@+id/date_begin"
-        android:layout_below="@+id/add_desc"
-        android:layout_alignParentStart="true"
-        android:hint="Дата начала"
-        android:paddingTop="10dp"
-        android:paddingBottom="15dp" />
-
-
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="time"
-        android:ems="10"
-        android:id="@+id/time_end"
-        android:hint="Время окончания"
-        android:layout_below="@+id/date_end"
-        android:layout_alignParentStart="true"
-        android:paddingTop="10dp"
-        android:paddingBottom="15dp" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="time"
-        android:ems="10"
-        android:id="@+id/time_begin"
-        android:hint="Время начала"
-        android:paddingTop="10dp"
-        android:paddingBottom="15dp"
-        android:layout_below="@+id/date_begin"
-        android:layout_alignParentStart="true" />
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Приоритет"
-        android:paddingBottom="20dp"
-        android:id="@+id/add_priority"
-        android:layout_below="@+id/time_end"
-        android:layout_alignEnd="@+id/time_end" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Добавить встречу"
+            android:id="@+id/textView3"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true" />
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Загаловок"
+            android:id="@+id/add_title"
+            android:paddingBottom="20dp"
+            android:layout_below="@+id/textView3"
+            android:layout_alignParentStart="true" />
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Описание"
+            android:paddingBottom="20dp"
+            android:layout_below="@+id/add_title"
+            android:layout_alignParentStart="true"
+            android:id="@+id/add_desc" />
 
         <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="date"
-        android:ems="10"
-        android:id="@+id/date_end"
-        android:hint="Дата окончания"
-        android:layout_below="@+id/time_begin"
-        android:layout_alignParentStart="true"
-        android:paddingTop="10dp"
-        android:paddingBottom="15dp" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="date"
+            android:ems="10"
+            android:id="@+id/date_begin"
+            android:layout_below="@+id/add_desc"
+            android:layout_alignParentStart="true"
+            android:hint="Дата начала"
+            android:paddingTop="10dp"
+            android:paddingBottom="15dp" />
+
+
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="time"
+                android:ems="10"
+                android:id="@+id/time_begin"
+                android:hint="Время начала"
+                android:paddingTop="10dp"
+                android:paddingBottom="15dp"
+                android:layout_below="@+id/date_begin"
+                android:layout_alignParentStart="true" />
+
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="date"
+                android:ems="10"
+                android:id="@+id/date_end"
+                android:hint="Дата окончания"
+                android:layout_below="@+id/time_begin"
+                android:layout_alignParentStart="true"
+                android:paddingTop="10dp"
+                android:paddingBottom="15dp" />
+
+            <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="time"
+            android:ems="10"
+            android:id="@+id/time_end"
+            android:hint="Время окончания"
+            android:layout_below="@+id/date_end"
+            android:layout_alignParentStart="true"
+            android:paddingTop="10dp"
+            android:paddingBottom="15dp" />
+
+            <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Приоритет"
+            android:paddingBottom="20dp"
+            android:id="@+id/add_priority"
+            android:layout_below="@+id/time_end"
+            android:layout_alignEnd="@+id/time_end" />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="добавить"
             android:id="@+id/add_button"
-            android:onClick="onClickAdd"
-            android:layout_alignBottom="@+id/scrollView3"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:onClick="onClickAdd"/>
 
-    </LinearLayout>
+        </LinearLayout>
     </ScrollView>
-
-
 
 </RelativeLayout>
