fix keyboard in editDate

--- a/app/src/main/res/layout/activity_meeting_add.xml
+++ b/app/src/main/res/layout/activity_meeting_add.xml
@@ -52,8 +52,7 @@
             android:layout_alignParentStart="true"
             android:hint="Дата начала"
             android:paddingTop="10dp"
-            android:paddingBottom="15dp"
-            android:editable="false"/>
+            android:paddingBottom="15dp" />
 
 
             <EditText
